--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "json-server": "^0.16.1",
